# ocp-build

./: .depend  .gitignore  .ocp-check-headers-ignore-files  .ocp-check-headers-ignore-headers  .travis-ci.sh  .travis-install.sh  .travis.yml  CHANGES  CHANGES.txt  CLA.md  Makefile  README.md  build.ocp  build.ocp2  ocp-autoconf.ac  ocp-autoconf.config  ocp-autoconf.files  opam  package.json  push-opam.sh  travis2github.ml
.github/workflows/: workflow.yml
autoconf/: Makefile.config.in  Makefile.rules  config.ocp2gen  config.ocp2gen.in  config.ocpgen.in  configure  configure.ac  generated.files  travis-install.sh
boot/: camlp4.ocp  ocaml.ocp
ci/: travis-ci.sh  travis-install.sh
distrib/: ocp-autoconf.descr  ocplib-lang.descr  sub-package.opam
docs/user-manual/: Makefile  chapter-autoconf.tex  chapter-install.tex  chapter-internals.tex  chapter-intro.tex  chapter-ocaml.tex  chapter-ocp2.tex  chapter-prepro.tex  chapter-tests.tex  chapter-tuto-describing.tex  chapter-tuto-using.tex  htmlmacros.hva  ocp2-manual.tex  user-manual.css  user-manual.tex
libs/ezcmd/: ezcmd.ml  ezcmd.mli
libs/ocplib-compat/: README  build.ocp  build.ocp2  ocpCompat.ml  stringCompat.ml
libs/ocplib-config/: build.ocp  build.ocp2  pythonConfig.ml  pythonConfig.mli  simpleConfig.ml  simpleConfig.mli  simpleConfigOCaml.ml  simpleConfigOCaml.mli  simpleConfigTypes.ml
libs/ocplib-debug/: build.ocp  build.ocp2  debugTyperex.ml  debugTyperex.mli  debugVerbosity.ml  debugVerbosity.mli  ocpDebug.ml  ocpDebug.mli
libs/ocplib-file/: README.md  build.ocp  build.ocp2  dir.ml  dir.mli  dirPath.ml  dirPath.mli  dirString.ml  dirString.mli  file.ml  file.mli  fileAbs.ml  fileChannel.ml  fileChannel.mli  fileDir.ml  fileDir.mli  fileDirMaker.ml  fileGen.ml  fileGen.mli  fileLabels.ml  fileLabels.mli  fileLines.ml  fileLines.mli  fileName.ml  fileName.mli  fileOS.ml  fileOS.mli  filePath.ml  filePath.mli  fileSel.ml  fileSel.mli  fileSig.ml  fileString.ml  fileString.mli
libs/ocplib-hashtbl/: Makefile  Notes.txt  TODO.txt  build.ocp  build.ocp2  fastHashtbl.funs  fastHashtbl.header  fastHashtbl.middle  fastHashtbl.ml  fastHashtbl.mli  hash.ml  hash.plot  hash.txt  hashtbl.tex  main.ml  stdHashtbl.ml  stdHashtbl.mli
libs/ocplib-lang/: .gitignore  build.ocp  build.ocp2  intMap.ml  intMap.mli  intSet.ml  intSet.mli  linearToposort.ml  linearToposort.mli  manpage.ml  manpage.mli  ocamllexer.mli  ocamllexer.mll  ocpArg.ml  ocpArg.mli  ocpArray.ml  ocpArray.mli  ocpDigest.ml  ocpDigest.mli  ocpGenlex.ml  ocpGenlex.mli  ocpHashtbl.ml  ocpHashtbl.mli  ocpLang.ml  ocpLang.mli  ocpList.ml  ocpList.mli  ocpList_test.ml  ocpManpage.ml  ocpManpage.mli  ocpOption.ml  ocpOption.mli  ocpPervasives.ml  ocpPervasives.mli  ocpReuse.ml  ocpReuse.mli  ocpStream.ml  ocpStream.mli  ocpString.ml  ocpString.mli  (+23 more)
libs/ocplib-maxunix/: README.txt  minUnix.ml  onlyWin32.ml
libs/ocplib-no-unix/: build.ocp  build.ocp2  unix.ml
libs/ocplib-stdlib/: build.ocp2  stdlibArg.ml  stdlibArg.mli
libs/ocplib-subcmd/: build.ocp  build.ocp2  subcommands.ml  subcommands.mli
libs/ocplib-system/: build.ocp  build.ocp2  configParser.mli  date.ml  date.mli  debug.ml  debug.mli  file.ml  file.mli  fileLines.mli  fileTemplate.ml  fileTemplate.mli  file_test.ml  ocpDate.mli  ocpDebug.ml  ocpFilename.ml  ocpFilename.mli  ocpSystem.ml  ocpUnix.ml  ocpUnix.mli  process.ml  process.mli  simpleConfig.ml  simpleConfig.ml4  simpleConfig.mli
libs/ocplib-unix/: build.ocp  build.ocp2  minUnix.ml  minUnix.mli  minUnix_c.c  onlyUnix.ml  onlyUnix.mli  onlyUnix_c.c  onlyWin32.ml  onlyWin32.mli  onlyWin32_c.c
ocp-autoconf.d/: build.ocp2inc  configure.ac  opam.trailer
ocp-build/: build.ocp  buildActionBuild.ml  buildActionClean.ml  buildActionHelp.ml  buildActionInstall.ml  buildActionPrefs.ml  buildActionQuery.ml  buildActionRoot.ml  buildActionTests.ml  buildActionUninstall.ml  buildActions.ml  buildArgs.ml  buildAutogen.ml  buildConfig.ml  buildConfig.mli  buildEngine.ml  buildEngineContext.ml  buildEngineDisplay.ml  buildEngineDisplay.mli  buildEngineMtime.mli  buildEngineRules.ml  buildEngineTypes.ml  buildEngineTypes.mli  buildFind.ml  buildFind.mli  buildGlobals.ml  buildMain.ml  buildMisc.ml  buildMtime.ml  buildOCFGen.ml  buildOCFGen.mli  buildOCP.ml  buildOCP.mli  buildOCPInterp.ml  buildOCPInterp.mli  buildOCPParse.ml  buildOCPParser.ml  buildOCPParser.mli  buildOCPParser.mly  buildOCPPrinter.ml  (+46 more)
ocp-pp/: .gitignore  Makefile  README.txt  build.ocp  main.ml  ocpp.ml  ocpp_parser.mly  ocpp_types.ml  ocpp_version.ml  versioning.mli
ocp-pp/compat/: compat.ml  lexer.mll  parser.ml  stringCompat.ml
ocp-pp/tests/: b.ml
ocplib-compat/: build.ocp  stringCompat.ml
ocplib-compat/3.12.1/: stringCompat.ml
ocplib-compat/with-bytes/: stringCompat.ml
ocplib-compat/without-bytes/: stringCompat.ml
ocplib-debug/: build.ocp  debugTyperex.ml  debugTyperex.mli  debugVerbosity.ml
ocplib-lang/: build.ocp  intMap.ml  intMap.mli  manpage.ml  ocamllexer.mli  ocpDigest.ml  ocpGenlex.ml  ocpHashtbl.ml  ocpLang.ml  ocpLang.mli  ocpList.ml  ocpList.mli  ocpPervasives.mli  ocpString.ml  ocpString.mli  stringMap.ml  stringMap.mli  stringTemplate.ml  stringTemplate.mli  test.ml  toposort.mli  trie.ml  trie.mli
ocplib-no-unix/: build.ocp  unix.ml
ocplib-subcmd/: build.ocp  subcommands.ml
ocplib-system/: build.ocp  debug.ml  debug.mli  file.ml  fileLabels.ml  fileLabels.mli  fileLines.ml  fileTemplate.ml  fileTemplate.mli  file_test.ml  ocpFilename.ml  process.ml  process.mli  reentrantBuffers.ml  simpleConfig.ml  simpleConfig.ml4  simpleConfig.mli
ocplib-unix/: build.ocp  minUnix.ml  minUnix_c.c  onlyUnix.ml  onlyUnix.mli  onlyUnix_c.c  onlyWin32.mli
opam/: ocp-build.opam
tests/cycle/: a.ml  b.ml  build.ocp
tests/ocp-build/: build.ocp
tools/cop/: build.ocp2
tools/jbuild2ocp/: build.ocp2  dune2dot.ml  dune2dot.mli  dune2ocp.ml  dune2ocp.mli  duneInterp.ml  duneInterp.mli  duneParser.ml  duneParser.mli  main.ml
tools/ocp-annot/: annotMain.ml  annotParser.ml  annotParser.mli  build.ocp2
tools/ocp-autoconf/: README.md  autoconfArgs.ml  build.ocp  (+11 more)
(+386 files in other folders)
