
HAS_BYTES=3.12.1
AX_COMPARE_VERSION( [${OCAMLVERSION}], [lt], [4.02.0],, HAS_BYTES=4.02.0)
AX_COMPARE_VERSION( [${OCAMLVERSION}], [lt], [4.03.0],, HAS_BYTES=4.03.0)

NEED_SEQ=true
echo OCAML version: ${OCAMLVERSION}
AX_COMPARE_VERSION( [${OCAMLVERSION}], [ge], [4.07.0], NEED_SEQ=false, )
echo RE version: ${OCAML_PKG_re_glob_VERSION}
AX_COMPARE_VERSION( [${OCAML_PKG_re_glob_VERSION}], [gt], [1.7.3],,NEED_SEQ=false)
echo NEED_SEQ=${NEED_SEQ}
